--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: AC:NH Completionist guide & track.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.1.2+3
+version: 2.1.3+4
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -25,6 +25,7 @@ dependencies:
   flutter_snake_navigationbar: ^0.4.0+1
   floating_search_bar: ^0.3.0
   flutter_launcher_icons: ^0.7.4
+  flare_splash_screen: ^2.0.1+2
   intl: ^0.16.0
 
   # The following adds the Cupertino Icons font to your application.
